<resources>
    <string name="app_name">Airbitz</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="synchronizing">Synchronizing…</string>
    <string name="no_break_space_character">\u00A0</string>
    <string name="google_maps_api_key">***REMOVED***</string>
    <string name="string_ok">OK</string>
    <string name="string_back">Back</string>
    <string name="string_yes">Yes</string>
    <string name="string_no">No</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_search">Search</string>
    <string name="string_done">Done</string>
    <string name="string_next_step">Next Step</string>
    <string name="string_back_button">Back button returns to the previous screen</string>
    <string name="string_help_button">Help button shows help for this screen</string>
    <string name="string_add_button">Add button adds a new wallet</string>
    <string name="string_payment_received">** Payment Received **</string>
    <string name="string_connection_problem_title">Connection Problem</string>
    <string name="string_no_connection_title">No connection</string>
    <string name="string_no_connection_message">Please turn on WiFi or Mobile Data</string>
    <string name="string_no_connection_response">There is a problem reaching the server. Please try again.</string>
    <string name="restaurant_and_food_trucks">Restaurants &amp; Food Trucks</string>
    <string name="bars_and_nightclubs">Bars &amp; Nightclubs</string>
    <string name="coffee_and_tea">Coffee &amp; Tea</string>
    <string name="more_categories">More Categories</string>
    <string name="current_location">Current Location</string>
    <string name="on_the_web">On the Web</string>
    <string name="category_or_business_name">Business Name or Category</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="web">Web</string>
    <string name="your_location">Your Location</string>
    <string name="near_you">Near You</string>
    <string name="no_results_found">No Results Found</string>
    <string name="no_location_found">Unable to get a current location. Please enable Location Services.</string>
    <string name="fragment_business_retrieving_data">Retrieving data…</string>
    <string name="fragment_business_no_results">No Results Found</string>
    <string name="fragment_business_cannot_retrieve_data">Can not retrieve data</string>
    <string name="fragment_business_no_categories_retrieved">No categories retrieved from server</string>
    <string name="fragment_business_enable_location_services">Enable location services for better results</string>
    <string name="fragment_directory_detail_getting_venue_data">Getting venue data…</string>
    <string name="fragment_directory_detail_timeout_retrieving_data">Timeout retrieving data…</string>
    <string name="fragment_directory_detail_directions">Directions</string>
    <string name="fragment_directory_detail_discount">"Discount "</string>
    <string name="server_error_account_already_exists">This account already exists.</string>
    <string name="server_error_account_does_not_exists">We were unable to find your account. Be sure your username is correct.</string>
    <string name="server_error_bad_password">Incorrect password.</string>
    <string name="server_error_wallet_exists"> </string>
    <string name="server_error_invalid_wallet">Wallet does not exist.</string>
    <string name="server_error_no_connection">Unable to connect to Airbitz server. Please try again later.</string>
    <string name="server_error_no_recovery_questions">No recovery questions are available for this user</string>
    <string name="server_error_not_supported">This operation is not supported.</string>
    <string name="server_error_insufficient_funds">Insufficient funds</string>
    <string name="server_error_synchronizing">Synchronizing with the network.</string>
    <string name="server_error_non_numeric_pin">Pin must be a numeric value.</string>
    <string name="server_error_other">An error has occurred.</string>
    <string name="fragment_landing_logo_description">An image of the Airbitz logo</string>
    <string name="fragment_landing_detail_text">Digital Currency Wallet</string>
    <string name="fragment_landing_swipe_text">Swipe to View Business Directory</string>
    <string name="fragment_landing_arrow_description">Bouncing Arrow</string>
    <string name="fragment_landing_username_hint">User Name</string>
    <string name="fragment_landing_password_hint">Password</string>
    <string name="fragment_landing_signin_button">Sign In</string>
    <string name="fragment_landing_signup_button">Sign Up</string>
    <string name="fragment_landing_forgot_text">Forgot Password</string>
    <string name="fragment_landing_forgot_image_description">Arrow Button</string>
    <string name="fragment_forgot_no_username_title">User Name Required</string>
    <string name="fragment_forgot_no_username_details">Please enter a User Name</string>
    <string name="fragment_forgot_no_account_title">No Recovery Questions</string>
    <string name="fragment_forgot_no_account_message">We were unable to find your account. Be sure your username is correct.</string>
    <string name="fragment_forgot_no_recovery_questions_title">No Recovery Questions</string>
    <string name="fragment_forgot_no_recovery_questions_text">This user does not have any recovery questions set!</string>
    <string name="activity_signup_title">Sign Up</string>
    <string name="activity_navigation_signin_failed">Sign-in failed</string>
    <string name="activity_navigation_signin_failed_unexpected">Sign-in failed unexpectedly</string>
    <string name="activity_signup_failed">Sign Up Failed</string>
    <string name="activity_change_password_failed">Change Password Failed</string>
    <string name="activity_change_pin_failed">Change PIN Failed</string>
    <string name="activity_change_recovery_failed">Change Recovery Questions Failed</string>
    <string name="activity_signup_title_change_password">Change Password</string>
    <string name="activity_signup_title_change_password_via_questions">Change Password</string>
    <string name="activity_signup_title_change_pin">Change Withdrawal PIN</string>
    <string name="activity_signup_button_next">Next Step</string>
    <string name="activity_signup_username_hint">User Name</string>
    <string name="activity_signup_password_hint">Password</string>
    <string name="activity_signup_password_confirm_hint">Re-enter Password</string>
    <string name="activity_signup_current_password">Current Password</string>
    <string name="activity_signup_old_password">Old Password</string>
    <string name="activity_signup_new_password">New Password</string>
    <string name="activity_signup_new_password_confirm">Re-enter New Password</string>
    <string name="activity_signup_pin_label">Withdrawal Pin</string>
    <string name="activity_signup_pin_hint">Create Pin</string>
    <string name="activity_signup_new_pin">New PIN</string>
    <string name="activity_signup_password_help">Password must have upper and lower case letter, number, and special character with a minimum 10 characters</string>
    <string name="activity_signup_popup_uppercase">Must have at least one upper case letter</string>
    <string name="activity_signup_popup_lowercase">Must have at least one lower case letter</string>
    <string name="activity_signup_popup_number">Must have at least one number</string>
    <string name="activity_signup_popup_specialcharacter">Must have at least one special character</string>
    <string name="activity_signup_popup_length">Must have at least 10 characters</string>
    <string name="activity_signup_pin_change_good">PIN successfully changed.</string>
    <string name="activity_signup_pin_change_bad">PIN could not be changed.</string>
    <string name="activity_signup_pin_change_title">Change Withdrawal PIN</string>
    <string name="activity_signup_password_change_title">Change Password</string>
    <string name="activity_signup_password_change_good">Password successfully changed.</string>
    <string name="activity_signup_password_change_bad">Password could not be changed.</string>
    <string name="activity_signup_password_change_via_questions_good">Password successfully changed.</string>
    <string name="activity_signup_password_change_via_questions_bad">Password could not be changed.</string>
    <string name="activity_signup_change_bad">Unsuccessful change. Try again.</string>
    <string name="activity_signup_enter_username">You must enter a user name</string>
    <string name="activity_signup_incorrect_password">Incorrect password.</string>
    <string name="activity_signup_insufficient_password">Insufficient Password.</string>
    <string name="activity_signup_passwords_dont_match">Password does not match re-entered password.</string>
    <string name="activity_signup_insufficient_pin">Withdrawal PIN must be 4 digits</string>
    <string name="activity_signup_create_wallet_fail">Create default wallet failed</string>
    <string name="activity_signup_time_to_crack">Time to crack: </string>
    <string name="activity_signup_seconds">seconds</string>
    <string name="activity_signup_minutes">minutes</string>
    <string name="activity_signup_hours">hours</string>
    <string name="activity_signup_days">days</string>
    <string name="activity_signup_weeks">weeks</string>
    <string name="activity_signup_months">months</string>
    <string name="activity_signup_years">years</string>
    <string name="activity_recovery_setup_title">Password Recovery Setup</string>
    <string name="activity_recovery_title">Password Recovery</string>
    <string name="activity_recovery_skip_button_text">Skip This Step</string>
    <string name="activity_recovery_complete_button">Complete Sign Up</string>
    <string name="activity_recovery_complete_button_change_questions">Done</string>
    <string name="activity_recovery_prompt_title">Skip this step</string>
    <string name="activity_recovery_prompt_skip">**WARNING** You will NEVER be able to recover your password if it is forgotten!!</string>
    <string name="activity_recovery_first_wallet_name">My Wallet</string>
    <string name="activity_recovery_alert_title">Alert</string>
    <string name="activity_recovery_answer_questions_alert">You must answer all six questions.  Make sure your answers are long enough.</string>
    <string name="activity_recovery_pick_questions_alert">You must choose all six questions before proceeding.</string>
    <string name="activity_recovery_question_default">Question</string>
    <string name="item_recovery_spinner_arrow_description">Drop down arrow</string>
    <string name="activity_recovery_done_title">Recovery Questions Set</string>
    <string name="activity_recovery_done_details">Your password recovery questions and answers are now set up.  When recovering your password, your answers must match exactly. **DO NOT FORGET YOUR PASSWORD AND RECOVERY ANSWERS** YOUR ACCOUNT CANNOT BE RECOVERED WITHOUT THEM!!</string>
    <string name="activity_recovery_error_title">Password Recovery failure</string>
    <string name="activity_recovery_error_incorrect_password">Please enter your correct password so your answers can be changed</string>
    <string name="dialog_days">Days</string>
    <string name="dialog_hours">Hours</string>
    <string name="dialog_mins">Mins</string>
    <string name="fragment_wallets_title">Wallets</string>
    <string name="fragment_wallets_balance_text">Total Balance</string>
    <string name="fragment_wallets_addwallet_name_hint">Name your new wallet</string>
    <string name="fragment_wallets_addwallet_currency_textview">Currency:</string>
    <string name="fragment_wallets_addwallet_online_textview">ONLINE</string>
    <string name="fragment_wallets_addwallet_offline_textview">OFFLINE</string>
</resources>