<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/actionbar_shadow_bottom"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_listview_business"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/actionbar_shadow_bottom"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp">

        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_edge_blue"
                android:divider="@drawable/gray_white_divider"
                android:orientation="vertical"
                android:showDividers="middle">

                <TextView
                    android:id="@+id/button_restaurant"
                    style="@style/CategoryItemTop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ico_restaurant"
                    android:text="@string/restaurant_and_food_trucks" />

                <TextView
                    android:id="@+id/button_bar"
                    style="@style/CategoryItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ico_bar"
                    android:drawablePadding="28dp"
                    android:paddingLeft="28dp"
                    android:text="@string/bars_and_nightclubs" />

                <TextView
                    android:id="@+id/button_coffee_tea"
                    style="@style/CategoryItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ico_coffee"
                    android:drawablePadding="28dp"
                    android:text="@string/coffee_and_tea" />

                <TextView
                    android:id="@+id/button_more"
                    style="@style/CategoryItemBottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ico_more"
                    android:text="@string/more_categories" />
            </LinearLayout>

            <com.airbitz.widgets.NoDefaultSpinner
                android:id="@+id/spinner_more_categories"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/transparent"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_near_you"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <View
            android:id="@+id/flag_for_sticky"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#b9d1dd" />

        <TextView
            android:id="@+id/textview_nearyou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background_grey"
            android:paddingBottom="@dimen/content_padding_quarter"
            android:paddingLeft="@dimen/content_padding_1_quarter"
            android:paddingRight="@dimen/content_padding_1_quarter"
            android:paddingTop="@dimen/content_padding_quarter"
            android:shadowColor="#FFFFFFFF"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/near_you"
            android:textColor="#ff384954"
            android:textSize="@dimen/text_size_small" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#88FFFFFF" />

    </LinearLayout>

</LinearLayout>

