<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_wallet_addwallet_height"
        android:orientation="vertical"
        android:background="@drawable/bg_add_wallet"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginRight="12.6dp"
        android:layout_marginLeft="12.6dp"
        android:layout_marginTop="44.1dp"
        android:focusableInTouchMode="true"
        android:id="@+id/fragment_wallets_addwallet_layout"
        android:visibility="gone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="31.5dp"
            android:layout_margin="9.45dp"
            android:id="@+id/fragment_wallets_addwallet_name_edittext"
            android:background="@drawable/emboss_down"
            android:textColor="@android:color/white"
            android:textColorHint="@color/text_hint"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:hint="@string/fragment_wallets_addwallet_name_hint"
            android:imeOptions="actionDone"
            android:textCursorDrawable="@drawable/bold_cursor_white"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:paddingLeft="9.45dp"/>

        <LinearLayout
            android:id="@+id/fragment_wallets_addwallet_currency_layout"
            android:layout_width="match_parent"
            android:layout_height="25.2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="138.6dp"
                android:layout_height="match_parent"
                android:text="@string/fragment_wallets_addwallet_currency_textview"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@android:color/white"/>

            <com.airbitz.objects.HighlightOnPressSpinner
                android:id="@+id/fragment_wallets_addwallet_currency_spinner"
                android:layout_width="138.6dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="6.3dp"
                android:spinnerMode="dropdown"
                android:popupBackground="@drawable/rounded_edge_white_bg"
                android:dropDownVerticalOffset="0dp"
                android:background="@drawable/bg_btn_blue_stretch"/>

        </LinearLayout>

        <!-- OFFLINE/ONLINE WALLETS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:padding="18.9dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/fragment_wallets_addwallet_online_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_wallets_addwallet_online_textview"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_weight="1"
                android:textColor="@android:color/white"/>


            <Switch
                android:id="@+id/fragment_wallets_addwallet_onoff_switch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textOff=""
                android:textOn=""
                android:thumb="@drawable/btn_toggle_thumb"
                android:track="@drawable/toggle_selector"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/fragment_wallets_addwallet_offline_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_wallets_addwallet_offline_textview"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_weight="1"
                android:textColor="#444444"/>

        </LinearLayout>

        <!--  -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37.8dp"
            android:layout_marginBottom="12.6dp"
            android:layout_marginTop="12.6dp"
            android:gravity="center">

            <com.airbitz.objects.HighlightOnPressButton
                android:id="@+id/fragment_wallets_addwallet_cancel_button"
                android:layout_width="138.6dp"
                android:layout_height="match_parent"
                android:layout_marginRight="6.3dp"
                android:background="@drawable/btn_cancel"
                android:text="@string/string_cancel"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"/>

            <com.airbitz.objects.HighlightOnPressButton
                android:id="@+id/fragment_wallets_addwallet_done_button"
                android:layout_width="138.6dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6.3dp"
                android:background="@drawable/btn_green"
                android:text="@string/string_done"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"/>


        </LinearLayout>

    <View
        android:id="@+id/fragment_wallets_invisible_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@android:color/transparent"/>

</LinearLayout>

