<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recovery_container_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MergeRootFrame">

    <RelativeLayout
        android:id="@+id/activity_recovery_header_layout"
        android:layout_width="match_parent"
        android:layout_height="44.1dp"
        android:background="@drawable/bg_dark_header">

        <ImageButton
            android:id="@+id/activity_password_recovery_back_button"
            android:layout_width="44.1dp"
            android:layout_height="44.1dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/string_back_button"
            android:padding="12.6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/btn_back"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/activity_recovery_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/activity_recovery_setup_title"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/activity_recovery_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_recovery_header_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/activity_recovery_skip_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12.6dp"
                android:layout_marginTop="12.6dp"
                android:background="@drawable/bg_btn_blue_stretch"
                android:drawableRight="@drawable/ico_forgot"
                android:gravity="center"
                android:paddingRight="6.3dp"
                android:text="@string/activity_recovery_skip_button_text"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/activity_password_recovery_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="37.8dp"
                android:layout_marginBottom="6.3dp"
                android:layout_marginTop="12.6dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/activity_signup_current_password"
                android:inputType="textPassword"
                android:paddingLeft="12.6dp"
                android:paddingRight="12.6dp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/settings_edit_hint"
                android:textCursorDrawable="@drawable/bold_cursor_white"
                android:textSize="14sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/activity_recovery_question_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_edge_blue_bg"
                android:orientation="vertical" />

            <Button
                android:id="@+id/activity_recovery_complete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25.2dp"
                android:layout_marginTop="6.3dp"
                android:background="@drawable/btn_green"
                android:padding="10dp"
                android:text="@string/activity_recovery_complete_button"
                android:textColor="@android:color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/activity_recovery_dummy_focus"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <View
        android:id="@+id/activity_recovery_dummy_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone" />


</RelativeLayout>